openwebui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: openwebui
spec:
  type: ClusterIP
  selector:
    app: openwebui
  ports:
    - port: 80
      targetPort: 8080
